--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,31 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "functions": {
-    "api/upload.py": {
+    "api/start-upload.py": {
+      "memory": 1024,
+      "maxDuration": 30
+    },
+    "api/process.py": {
       "memory": 3008,
       "maxDuration": 800
+    },
+    "api/status.py": {
+      "memory": 256,
+      "maxDuration": 10
     }
   },
   "routes": [
     {
-      "src": "/api/upload",
-      "dest": "/api/upload.py"
+      "src": "/api/start-upload",
+      "dest": "/api/start-upload.py"
+    },
+    {
+      "src": "/api/process",
+      "dest": "/api/process.py"
+    },
+    {
+      "src": "/api/status",
+      "dest": "/api/status.py"
     }
   ]
 }
